@@ -412,7 +412,7 @@ public final class JDBCAccessLogValve extends ValveBase implements AccessLog {
      * is desired or not.
      */
     public void setResolveHosts(String resolveHosts) {
-        this.resolveHosts = new Boolean(resolveHosts).booleanValue();
+        this.resolveHosts = Boolean.valueOf(resolveHosts).booleanValue();
     }
 
     /**
